src/sections/ContactSection/ContactSection.css
:root {
    --dark: #092428;
    --light: #c8e690;
    --title-font: 'Roboto', sans-serif;
    --sub-font: 'Open Sans', sans-serif;
    --text-font: 'Montserrat', sans-serif;
}

.hide {
    display: none;
}

#contact-section {
    height: 100vh;
    padding-top: 70px;
}

#contact-section h2 {
   font-size: 38px;
   font-family: var(--title-font);
   color: var(--dark);
   text-align: center;
   margin: 50px 0px 50px 0px;
}

#contacts-container {
    display: flex;
    justify-content: space-between;

    margin: auto;
    height: 60%;
    width: 60%;
    background-color: var(--dark);
    border-radius: 10px;
}

#contact-form-container {
    display: flex;
    justify-content: center;
    align-items: center;
    
    width: 55%;
}

#contact-form-container form {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;

    width: 100%;
    height: 90%;
}

#contact-form-container form input, 
#contact-form-container form textarea {
    width: 80%;
    font-size: 16px;
    font-family: var(--text-font);
    padding: 5px;
    border-radius: 5px;
}

#contact-form-container form input {
    height: 8%;
}

#contact-form-container form textarea {
    height: 25%;
}

#contact-form-container form input:focus, 
#contact-form-container form textarea:focus {
    outline: none;
}

#contact-form-container form input[type=submit] {
    background-color: var(--light);
    color: var(--dark);
    border: 2px solid white;
    opacity: 1;
    transition: .5s ease-out;
}

#contact-form-container form input[type=submit]:hover {
    cursor: pointer;
}

#contact-form-container form input[type=submit]:disabled {
    cursor: not-allowed;
    opacity: .5;
}

#contact-container {
    display: flex;
    flex-direction: column;
    justify-self: self-end;
    align-self: center;

    width: 35%;
}

#contact-container h3 {
    font-size: 26px;
    font-family: var(--title-font);
    color: white;
}

#contact-container a {
    text-decoration: none;
    color: white;
    font-size: 15px;
    font-family: var(--text-font);
    margin-top: 10px;
    transition: .8s ease-out;
}

#contact-container a:hover {
    color: var(--light);
}

@media only screen and (max-width: 768px) {
    #contacts-container {
        margin-bottom: 10px;
    }

    #contacts-container {
        display: flex;
        flex-direction: column;

        height: 100%;
        width: 100%;
        border-radius: 0px;
    }

    #contact-form-container {
        width: 100%;
        height: 90%;
    }

    #contact-form-container form input, 
    #contact-form-container form textarea {
        width: 90%;
    }

    #contact-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-self: center;

        width: 80%;
        padding-bottom: 1rem;
        text-align: center;
    }

    #contact-container h3 {
        padding-bottom: 1rem;
    }
}

